--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.6",
     "@react-navigation/bottom-tabs": "^5.0.0",
     "@react-navigation/native": "^5.0.0",
+    "@react-navigation/stack": "^5.0.0",
     "axios": "^0.19.2",
     "moment": "^2.24.0",
     "native-base": "^2.13.8",
