--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/bottom-tabs": "^5.0.0",
     "@react-navigation/native": "^5.0.0",
     "@react-navigation/stack": "^5.0.0",
+    "acorn": "^7.1.1",
     "axios": "^0.19.2",
     "minimist": "^1.2.5",
     "moment": "^2.24.0",
